Adding new parts

--- a/index.html
+++ b/index.html
@@ -1,3 +1,152 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
-  <p>Test</p>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <div class="switch">Dark mode:              <span class="inner-switch">OFF</span>
+        </div>
+        <link rel="stylesheet" href="assets/css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet"> 
+    </head>
+    <body>
+        <script src="assets/js/jquery.js"></script>
+        <script src="assets/js/script.js"></script>
+        <h2 align="center" id="hello-friend-i-m-ankit-aka-ankitsumitg-saphine-linkedin-">Hello Friend, I&#39;m Ankit - aka
+            <a href="https://www.linkedin.com/in/ankitsumitg/">ankitsumitg | saphine</a>
+            👋</h2>
+        <p align="center"><img
+            src="https://media.giphy.com/media/l4EpkVLqUj8BI7OV2/giphy-downsized.gif"
+            alt="Alt Text"></p>
+        <p align="center">
+            <a href="https://discord.gg/BfDQSh8q"><img
+                src="https://img.shields.io/discord/599635129278660609?style=for-the-badge&amp;logo=discord"
+                alt="Discord"></a>
+            <a href="https://github.com/ankitsumitg"><img
+                src="https://img.shields.io/github/followers/ankitsumitg?color=black&amp;style=for-the-badge&amp;logo=github"
+                alt="Github"></a>
+            <a href="https://github.com/ankitsumitg"><img
+                src="https://badges.pufler.dev/commits/monthly/ankitsumitg?style=for-the-badge&amp;logo=git"
+                alt="Commits Badge"></a>
+            <a
+                href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fgithub.com%2Fankitsumitg&amp;screen_name=ankitsumitg"><img
+                src="https://img.shields.io/twitter/follow/ankitsumitg?color=1DA1F2&amp;logo=twitter&amp;style=for-the-badge"
+                alt="Twitter Follow"></a>
+        </p>
+        <hr>
+        <h3 align="center" id="i-m-a-coder-proud-geek-">I&#39;m a Coder &amp; Proud Geek 👨🏻‍💻!!!</h3>
+        <ul>
+            <li>Working. Trying my best to work &amp; contribute towards a better cause,
+                have a great impact on people &amp; less impact on environment. 🌲💚💚💚</li>
+            <li>Wish me on 22nd April. 😅</li>
+            <li>I also do Competitive Programming and Capture the Flag challenges just for
+                fun mostly. 💻😀</li>
+            <li>I’m currently getting my hands dirty on Rust. 👦🏻</li>
+            <li>Reach me on Discord for anything. 🦸‍♂️</li>
+            <li>Do checkout my projects on GitHub. 👨🏻‍💻🖱</li>
+        </ul>
+        <hr>
+        <h3 id="my-life-philosophy">My Life Philosophy</h3>
+        <blockquote>
+            <p>If you don’t have any shadows, you’re not standing in the light ~
+                <strong>
+                    <em>Lady Gaga</em>
+                </strong>
+            </p>
+        </blockquote>
+        <hr>
+        <h3 id="workspace-spec-">Workspace Spec 💻</h3>
+        <p><img
+            src="https://img.shields.io/badge/Windows-HP_Pavillion-0078D6?style=for-the-badge&logo=windows&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/intel-core%20i5%2010th-%230071C5.svg?&style=for-the-badge&logo=intel&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/nvidia-gtx%20950m-%2376B900.svg?&style=for-the-badge&logo=nvidia&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/RAM-12GB-%230071C5.svg?&style=for-the-badge&logoColor=white"/></p>
+        <hr>
+        <h3 id="connect-with-me-">Connect with me:</h3>
+        <p>
+            <a href="https://www.linkedin.com/in/ankitsumitg/"><img
+                align="left"
+                alt="ankitsumitg | LinkedIn"
+                width="25px"
+                src="https://img.icons8.com/doodle/48/000000/linkedin.png"/></a>
+            <a href="https://twitter.com/ankitsumitg"><img
+                align="left"
+                alt="ankitsumitg | Twitter"
+                width="25px"
+                src="https://img.icons8.com/doodle/48/000000/twitter.png"/></a>
+            <a href="https://instagram.com/ankitsumitg/"><img
+                align="left"
+                alt="ankitsumitg | Instagram"
+                width="25px"
+                src="https://img.icons8.com/doodle/48/000000/instagram-new.png"/></a>
+            <a href="https://discord.gg/BfDQSh8q"><img
+                align="left"
+                alt="ankitsumitg | Discord"
+                width="25px"
+                src="https://img.icons8.com/plasticine/100/000000/discord-logo.png"/></a>
+            <a href="https://www.reddit.com/user/ankitsumitg"><img
+                align="left"
+                alt="ankitsumitg | Reddit"
+                width="25px"
+                src="https://img.icons8.com/doodle/48/000000/reddit--v1.png"/></a>
+            <a href="https://www.twitch.tv/saphine__"><img
+                align="left"
+                alt="ankitsumitg | Twitch"
+                width="25px"
+                src="https://img.icons8.com/doodle/48/000000/twitch.png"/></a>
+            <br></p>
+        <hr>
+        <h3 id="skills-and-tools-">Skills and Tools:</h3>
+        <p><img
+            src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black"/>
+            <img
+                src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&logo=visual%20studio%20code&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/Docker-2CA5E0?style=for-the-badge&logo=docker&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/Spring-6DB33F?style=for-the-badge&logo=spring&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/C%2B%2B-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/MySQL-00000F?style=for-the-badge&logo=mysql&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
+            <img
+                src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"/></p>
+        <hr>
+        <h3 id="-ins-recent-activity-ins-">
+            <ins>Recent Activity</ins>
+            -&gt;</h3>
+        <!--START_SECTION:activity-->
+        <ul>
+            <li>Worked on some code. ⚒</li>
+            <li>Had a lot of coffee ☕ and some food. 🍔🍕🍲</li>
+            <li>Comited some code. 💾</li>
+            <li>Slept. 😴</li>
+            <li>Repeat. 🔁</li>
+        </ul>
+        <hr>
+        <!--END_SECTION:activity-->
+        <!--- ankitsumitg/ankitsumitg is a ✨ special ✨ repository because its
+        `README.md` (this file) appears on your GitHub profile. You can click the
+        Preview link to take a look at your changes. - 👋 Hi, I’m @ankitsumitg - 👀 I’m
+        interested in ... - 🌱 I’m currently learning ... - 💞️ I’m looking to
+        collaborate on ... - 📫 How to reach me ... --->
+    </body>
 </html>
